--- a/freebooks/src/style.css
+++ b/freebooks/src/style.css
@@ -32,6 +32,8 @@ code {
   
 }
 
+
+
 .search--button {
   width: 100px;
   height: 30px;
@@ -60,4 +62,11 @@ code {
 
 .returned-books:hover {
   color: blue;
+}
+
+.uplod-input {
+  display: block;
+  margin: 5px;
+  font-size: 30px;
+  text-align: center;
 }
